# fontawesome.pri

./: CMakeLists.txt  fontawesome.h
FontAwesome/: FontAwesome.qml
scripts/: convert.js
